--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
@@ -1,15 +1,19 @@
 ## 第零定律
-具有相同 $\displaystyle p,V,T$ 的系统具有相同宏观量。
-达到热平衡的多个系统具有相同的热力学量，引入为 $\displaystyle T$ 温度
+具有相同 $\displaystyle p,V,T$ 的系统具有相同宏观量。即两个热力学系统中的每一个都与第三个热力学系统处于热平衡，彼此之间仍处于热平衡。
+
+达到热平衡的多个系统具有相同的宏观热力学量，引入为 $\displaystyle T$ 温度
 
 ## 物态方程
 $\displaystyle pVT$ 描绘一个系统的所有宏观量，系统的行为满足 $\displaystyle f(pVT)=0$
+体膨胀系数：
 $$
 \alpha=\frac{1}{V}\left( \frac{ \partial V }{ \partial T }  \right) _{p}
 $$
+压强系数：
 $$
 \beta=\frac{1}{p}\left( \frac{ \partial p }{ \partial T }  \right) _{V}
 $$
+等温压缩系数：
 $$
 k_{T}=\frac{1}{V}\left( \frac{ \partial V }{ \partial p }  \right) _{T}
 $$
@@ -19,8 +23,144 @@ $$
 $$
 df=\left( \frac{ \partial f }{ \partial p }  \right)_{VT}dp +\left( \frac{ \partial f }{ \partial V }  \right)_{pT}dV+\left( \frac{ \partial f }{ \partial T }  \right)_{pV}dT=0
 $$
+
+有
+$$
+(\frac{\partial T}{\partial V})_{p}=\frac{-(\frac{\partial T}{\partial V})_{pT}}{(\frac{\partial f}{\partial T})_{pV}}
+$$
+$$
+(\frac{\partial p}{\partial T})_{V}=\frac{-(\frac{\partial T}{\partial T})_{pV}}{(\frac{\partial f}{\partial p})_{VT}},(\frac{\partial V}{\partial p})_{T}=\frac{-(\frac{\partial T}{\partial p})_{VT}}{(\frac{\partial f}{\partial V})_{pT}}
+$$
+联立得：
+$$
+(\frac{\partial V}{\partial p})_{T}\cdot(\frac{\partial P}{\partial T})_{V}\cdot(\frac{\partial T}{\partial V})_{P}=-1
+$$
 ## 气体状态方程
 ### 理想气体
 $$
-\frac{pV}{T}=Nk_{B}
+\frac{pV}{T}=Nk_{B}=nR
 $$
+理想气体压强足够低，分子之间平均距离足够大，其平均相互作用能量远小于分子平均动能。
+### 范德瓦尔斯气体方程
+$\displaystyle pV=nRT$ 修正, 考虑粒子为具有一定体积，可以发生相互碰撞。
+范德瓦尔斯方程的修正形式如下：
+$$
+\left( p+\frac{an^2}{V^2} \right)\left( V-nb \right) =nRT 
+$$
+其中，$\displaystyle p$ 是气体的压力，$\displaystyle V$ 是气体的体积，$\displaystyle n$ 是气体的物质的量，$\displaystyle R$ 是气体常数，$\displaystyle T$ 是气体的温度，a 和 b 是范德瓦尔斯方程的修正参数。
+
+$\displaystyle  p+\frac{an^2}{V^2}$ 解释：碰壁频率增加，压强应当增大
+
+修正参数 a 和 b 分别表示气体分子之间的吸引力和气体分子体积对压力和体积的修正。修正参数 a 与气体分子之间的吸引力有关，当分子之间的吸引力增加时，a 的值也会增加。修正参数 b 与气体分子体积有关，当分子体积增加时，b 的值也会增加。
+
+### 昂尼斯方程
+$$
+P=\frac{nRT}V[1+\frac nVB(T)+\left( \frac nV \right)^2 C(T)]
+$$
+$\displaystyle B ,C$ 分别为第二位、第三位位力系数
+## 顺磁性固体的物态方程
+$$
+f\left( p,V,T,M,B \right)=0 \implies f\left( T,M,B \right) =0 
+$$
+### 居里定理
+$$
+M=\frac{C}{T}H=\frac{C'}{T}B
+$$
+#### 居里定理推导过程
+
+
+假设顺磁性固体中的自旋磁矩与外磁场的相互作用可以用简单的经典力学模型描述。考虑一个自旋磁矩在外磁场中的能量，可以写成以下形式：
+$$E = -\vec{M} \cdot \vec{B}$$
+其中，$\vec{M}$ 是磁矩，$\vec{B}$ 是外磁场。
+配分函数
+$$
+\rho _{i}=e^{ -\varepsilon _{i}/k_{B}T }
+$$
+$$
+Z=e^{ 2\mu_{B}B}-e^{ -2\mu_{B}B} 
+$$
+$$
+\begin{align}
+M&=n\sum \rho_{i} \mu_{i} \\
+&=n\mu+e^{ 2\mu_{B}B}+n\mu-e^{ -2\mu_{B}B} \\ 
+&=\frac{n}{B}\frac{ \partial  }{ \partial B }\ln Z \\
+&=n\mu_{B}
+\end{align}
+
+
+$$
+
+根据统计物理学的理论，顺磁性固体中的自旋磁矩服从玻尔兹曼分布，即
+$$P(\vec{M}) = \frac{e^{-\beta E}}{Z}$$
+其中，$\beta = \frac{1}{k_B T}$是逆温度，$k_B$是玻尔兹曼常数，$Z$是配分函数。
+
+我们可以将磁矩的分布函数$P(\vec{M})$对磁矩$\vec{M}$求平均，即
+$$\langle \vec{M} \rangle = \int \vec{M} P(\vec{M}) d\vec{M}$$
+根据定义，磁矩的平均值可以写成以下形式：
+$$\langle \vec{M} \rangle = \frac{1}{Z} \int \vec{M} e^{-\beta E} d\vec{M}$$
+由于能量$E$与磁矩$\vec{M}$的关系为$E = -\vec{M} \cdot \vec{B}$，我们可以将上式改写为：
+$$\langle \vec{M} \rangle = \frac{1}{Z} \int \vec{M} e^{\beta \vec{M} \cdot \vec{B}} d\vec{M}$$
+根据矢量积分的性质，上式可以进一步改写为：
+
+其中，$\theta$和$\phi$分别是磁矩$\vec{M}$与外磁场$\vec{B}$的夹角的极坐标表示。
+
+为了求解上式，我们可以引入一个辅助函数$I(\beta B)$，定义为：
+$$I(\beta B) = \int_0^\infty M e^{\beta M B} dM$$
+通过对$I(\beta B)$的求导，我们可以得到$\langle \vec{M} \rangle$的表达式。
+
+首先，对$I(\beta B)$求导，得到：
+$$\frac{dI(\beta B)}{d(\beta B)} = \int_0^\infty M^2 e^{\beta M B} dM$$
+然后，对上式再次求导，得到：
+$$\frac{d^2I(\beta B)}{d(\beta B)^2} = \int_0^\infty M^3 e^{\beta M B} dM$$
+以此类推，我们可以得到$\frac{d^nI(\beta B)}{d(\beta B)^n}$的表达式。
+
+现在，我们将$I(\beta B)$展开成幂级数的形式：
+$$I(\beta B) = \sum_{n=0}^\infty \frac{1}{n!} \left(\frac{d^nI(\beta B)}{d(\beta B)^n}\right)_{\beta B=0} (\beta B)^n$$
+将上式代入$\langle \vec{M} \rangle$的表达式中，得到：
+$$\langle \vec{M} \rangle = \frac{1}{Z} \int_0^\infty \int_0^\pi \int_0^{2\pi} M e^{\beta M B \cos \theta} dM d\theta d\phi$$
+### 居里外斯定律
+平均场近似推到
+$$
+M=\frac{C}{TQ}H
+$$
+## 第一定律和熵、第二定律和熵增、第三定律和零温
+### 熵
+#### 热力学定义熵
+封闭系统下 $\displaystyle dU=đQ+đA$
+$$
+đA=-pdV\implies-\frac{đA}{p}=dV
+$$
+与路径无关。
+$$
+\frac{đQ}{T}=dS
+$$
+全微分引出态函数，热力学定义熵。
+#### 统计物理
+$$
+S=k_{B}\ln \Omega=-k_{B}\int \rho \ln \rho \, d\Omega
+$$
+平衡态下
+$$\oint\frac{dQ}T=\oint dS=0$$
+非平衡态向平衡态演化过程之中
+$$
+dS\geq \frac{dQ}{T}
+$$
+### 热力学第二定律
+$$
+Tds\geq dQ=dU+pdV
+$$
+#### 熵增原理
+绝热或孤立体系下
+$\displaystyle dQ=0 \implies ds\geq 0$ 
+**克劳修斯表述**：不可能把热量从低温物体传到高温物体不引起其他变化。
+**开尔文表述**：不可能从单一热源吸热使之完全变成有用的功而不引起其他变化。
+
+### 第三定律
+$\displaystyle T\to 0,S\to 0,\triangle S\to 0$
+熵变表达式：
+$$
+\triangle S=\frac{\triangle U-\triangle G}{T} \implies \triangle U-\triangle G
+$$
+更高阶地趋于零，即？
+
+## 
