--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
@@ -41,6 +41,10 @@ $$
 \frac{pV}{T}=Nk_{B}=nR
 $$
 理想气体压强足够低，分子之间平均距离足够大，其平均相互作用能量远小于分子平均动能。
+#### 绝热过程下
+$$
+dU=dQ-pdV
+$$
 ### 范德瓦尔斯气体方程
 $\displaystyle pV=nRT$ 修正, 考虑粒子为具有一定体积，可以发生相互碰撞。
 范德瓦尔斯方程的修正形式如下：
@@ -163,4 +167,7 @@ $$
 $$
 更高阶地趋于零，即？
 
-## 
+## 制冷、热一、热机
+
+### 卡诺定理
+$\displaystyle T_{1},T_{2}$ 之间之间卡诺热机效率最大
