--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/统计物理表述热力学量.md
@@ -156,7 +156,7 @@ $$
 C_{p}=\left( \frac{ \partial H }{ \partial T }  \right)_{p}=C_{V}+\left[ p+\left( \frac{ \partial U }{ \partial V }  \right)_{V}  \right]\left( \frac{ \partial V }{ \partial T }  \right)_{p}  
 $$
 $$
-v=\frac{C_{p}}{C_{V}}
+\gamma=\frac{C_{p}}{C_{V}}
 $$
 ### 广延量和强度量
 $$
