--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学系数.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学系数.md
@@ -115,8 +115,38 @@ $$
 $$
 ### 麦氏关系应用
 $$
-dU=TdS-pdV
+\begin{align}
+dU&=TdS-pdV \\
+&=T\left(  \left( \frac{ \partial S }{ \partial T }  \right)_{V}dT +\left( \frac{ \partial S }{ \partial V }  \right)_{T}dV\right) -pdV \\
+&=T\left( \frac{ \partial S }{ \partial T }  \right)_{V}dT +\left[ T\left( \frac{ \partial p }{ \partial T }  \right)_{V}-p  \right]dV
+\end{align}
+
+$$
+
+$$
+\begin{align}
+dU&=\left( \frac{ \partial U }{ \partial T }  \right)_{V}dT +\left( \frac{ \partial U }{ \partial V }  \right)_{T}dV \\
+&=C_{V}dT+\left( T\left( \frac{ \partial p }{ \partial T }  \right)_{V}-p  \right)dV 
+\end{align}
+$$ 
+## 热力学特殊函数
+选择合适的变量，由其中一个可以得到其他。
+$$
+U=U\left( S,V \right) \implies dU=TdS-pdV
 $$
 $$
-dU
+H=H\left( S,p \right) \implies dH=TdS-Vdp
+$$
+$$
+F=F\left( T,V \right) \implies dF=-SdT-pdV
+$$
+$$
+G=G\left( T,p \right) \implies dG=-SdT-Vdp
+$$
+例子
+
+## 均匀物质热力学
+### 表面热力学
+$$
+dA=Fdr=\frac{F}{l}
 $$
