--- a/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/热力学/热力学基本规律.md
@@ -1,4 +1,4 @@
-## 第零定律
+## 热力学第零定律
 具有相同 $\displaystyle p,V,T$ 的系统具有相同宏观量。即两个热力学系统中的每一个都与第三个热力学系统处于热平衡，彼此之间仍处于热平衡。
 
 达到热平衡的多个系统具有相同的宏观热力学量，引入为 $\displaystyle T$ 温度
@@ -63,6 +63,16 @@ P=\frac{nRT}V[1+\frac nVB(T)+\left( \frac nV \right)^2 C(T)]
 $$
 $\displaystyle B ,C$ 分别为第二位、第三位位力系数
 ## 顺磁性固体的物态方程
+一般固体无法给出类似气体的状态方程，但这种情况可以
+一般气体：
+$$
+f\left( p,V,T \right)=0 
+$$
+开放系统
+$$
+f\left( p,V,T,N \right)=0 
+$$
+磁性材料
 $$
 f\left( p,V,T,M,B \right)=0 \implies f\left( T,M,B \right) =0 
 $$
@@ -72,7 +82,10 @@ M=\frac{C}{T}H=\frac{C'}{T}B
 $$
 #### 居里定理推导过程
 
-
+电子绕核运动，等效为环形电流，产生磁场称为磁子,分子磁矩的取向只有两种。量子力学给出
+$$
+\vec{\mu}=-2\mu_B\vec{S},s=\pm1/2,\mu_B=\frac{e\hbar}{2m_e}
+$$
 假设顺磁性固体中的自旋磁矩与外磁场的相互作用可以用简单的经典力学模型描述。考虑一个自旋磁矩在外磁场中的能量，可以写成以下形式：
 $$E = -\vec{M} \cdot \vec{B}$$
 其中，$\vec{M}$ 是磁矩，$\vec{B}$ 是外磁场。
@@ -86,59 +99,39 @@ $$
 $$
 \begin{align}
 M&=n\sum \rho_{i} \mu_{i} \\
-&=n\mu+e^{ 2\mu_{B}B}+n\mu-e^{ -2\mu_{B}B} \\ 
-&=\frac{n}{B}\frac{ \partial  }{ \partial B }\ln Z \\
-&=n\mu_{B}
+&=n\mu_{+}e^{ \mu_{\beta}\beta}+n\mu_{-}e^{ -2\mu_{\beta}\beta} \\ 
+&=\frac{n}{\beta}\frac{ \partial  }{ \partial \beta }\ln Z \\
+&=n\mu_{\beta}\frac{e^{\mu_BB/k_BT}-e^{-\mu_BB/k_BT}}{e^{\mu_BB/k_BT}+e^{-\mu_BB/k_BT}}
 \end{align}
-
-
 $$
 
-根据统计物理学的理论，顺磁性固体中的自旋磁矩服从玻尔兹曼分布，即
-$$P(\vec{M}) = \frac{e^{-\beta E}}{Z}$$
-其中，$\beta = \frac{1}{k_B T}$是逆温度，$k_B$是玻尔兹曼常数，$Z$是配分函数。
+#### 高温极限或弱磁场下
+$\displaystyle \frac{\mu_{B}B}{k_{B}T}$ 很小，对小量展开并化简，
+$$
+M=\frac{n\mu_B^2}{k_BT}B=\frac CTB
+$$
+即居里定律
+#### 低温极限或强磁场下
+$$
+m=N\mu_{B}
+$$
 
-我们可以将磁矩的分布函数$P(\vec{M})$对磁矩$\vec{M}$求平均，即
-$$\langle \vec{M} \rangle = \int \vec{M} P(\vec{M}) d\vec{M}$$
-根据定义，磁矩的平均值可以写成以下形式：
-$$\langle \vec{M} \rangle = \frac{1}{Z} \int \vec{M} e^{-\beta E} d\vec{M}$$
-由于能量$E$与磁矩$\vec{M}$的关系为$E = -\vec{M} \cdot \vec{B}$，我们可以将上式改写为：
-$$\langle \vec{M} \rangle = \frac{1}{Z} \int \vec{M} e^{\beta \vec{M} \cdot \vec{B}} d\vec{M}$$
-根据矢量积分的性质，上式可以进一步改写为：
-
-其中，$\theta$和$\phi$分别是磁矩$\vec{M}$与外磁场$\vec{B}$的夹角的极坐标表示。
-
-为了求解上式，我们可以引入一个辅助函数$I(\beta B)$，定义为：
-$$I(\beta B) = \int_0^\infty M e^{\beta M B} dM$$
-通过对$I(\beta B)$的求导，我们可以得到$\langle \vec{M} \rangle$的表达式。
-
-首先，对$I(\beta B)$求导，得到：
-$$\frac{dI(\beta B)}{d(\beta B)} = \int_0^\infty M^2 e^{\beta M B} dM$$
-然后，对上式再次求导，得到：
-$$\frac{d^2I(\beta B)}{d(\beta B)^2} = \int_0^\infty M^3 e^{\beta M B} dM$$
-以此类推，我们可以得到$\frac{d^nI(\beta B)}{d(\beta B)^n}$的表达式。
-
-现在，我们将$I(\beta B)$展开成幂级数的形式：
-$$I(\beta B) = \sum_{n=0}^\infty \frac{1}{n!} \left(\frac{d^nI(\beta B)}{d(\beta B)^n}\right)_{\beta B=0} (\beta B)^n$$
-将上式代入$\langle \vec{M} \rangle$的表达式中，得到：
-$$\langle \vec{M} \rangle = \frac{1}{Z} \int_0^\infty \int_0^\pi \int_0^{2\pi} M e^{\beta M B \cos \theta} dM d\theta d\phi$$
 ### 居里外斯定律
 平均场近似推到
 $$
 M=\frac{C}{TQ}H
 $$
 ## 第一定律和熵、第二定律和熵增、第三定律和零温
-### 熵
+### 第一定律和熵
 #### 热力学定义熵
 封闭系统下 $\displaystyle dU=đQ+đA$
 $$
 đA=-pdV\implies-\frac{đA}{p}=dV
 $$
-与路径无关。
 $$
 \frac{đQ}{T}=dS
 $$
-全微分引出态函数，热力学定义熵。
+这两个全微分与路径无关。全微分引出态函数，热力学定义熵。
 #### 统计物理
 $$
 S=k_{B}\ln \Omega=-k_{B}\int \rho \ln \rho \, d\Omega
@@ -149,7 +142,7 @@ $$\oint\frac{dQ}T=\oint dS=0$$
 $$
 dS\geq \frac{dQ}{T}
 $$
-### 热力学第二定律
+### 第二定律和焓
 $$
 Tds\geq dQ=dU+pdV
 $$
