--- a/物理学/本科课程/热力学与统计物理/课堂笔记/相变和临界现象/相平衡与相变.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/相变和临界现象/相平衡与相变.md
@@ -143,3 +143,7 @@ $$
 $\displaystyle L=\left( S_{2}-S_{1} \right)$
 
 ### 相图
+#### 临界点
+该点之后，气体和液体的区别消失
+#### p-T 曲线斜率
+一般情况下，$\displaystyle \frac{dp}{dT}>0$ ，液相和固相体积相差很小，导致 $\displaystyle p-T$ 曲线斜率巨大。
