--- a/物理学/本科课程/热力学与统计物理/课堂笔记/相变和临界现象/相变.md
+++ b/物理学/本科课程/热力学与统计物理/课堂笔记/相变和临界现象/相变.md
@@ -71,4 +71,57 @@ $$
 $\displaystyle \mu_{1}\left( p,T \right)=\mu_{2}\left( p,T \right)$ 但 $\displaystyle \frac{\partial\mu_1}{\partial T}\neq\frac{\partial\mu_2}{\partial T},~\frac{\partial\mu_1}{\partial p}\neq\frac{\partial\mu_2}{\partial p}$
 
 二级相变
+$\displaystyle \mu_{1}=\mu_{2},~\frac{\partial\mu_1}{\partial T}=\frac{\partial\mu_2}{\partial T},~\frac{\partial\mu_1}{\partial p}=\frac{\partial\mu_2}{\partial p}$
+$\displaystyle \frac{\partial^2\mu_1}{\partial p^2}\neq\frac{\partial^2\mu_2}{\partial p^2},~\frac{\partial^2\mu_1}{\partial T^2}\neq\frac{\partial^2\mu_2}{\partial T^2},~\frac{\partial^2\mu_1}{\partial p\partial T}\neq\frac{\partial^2\mu_2}{\partial p\partial T}$
 
+$\displaystyle C_{p}=T\left( \frac{ \partial S }{ \partial T } \right)_{p}=-T\frac{ \partial^{2} \mu }{ \partial T^{2} }$
+
+$\displaystyle \alpha=\frac{1}{V}\left( \frac{ \partial V }{ \partial T } \right)_{p}=-\frac{1}{C}\frac{ \partial^{2} \mu }{ \partial p^{2} }$
+
+$\displaystyle \kappa=-\frac{1}{V}\left( \frac{ \partial V }{ \partial p } \right)_{T}=-\frac{1}{V}\frac{ \partial^{2} \mu }{ \partial T\partial p }$
+
+###  液气相变的临界点—范氏气体
+$$
+T_c=\frac{8a}{27Rb},~P_c=\frac a{27b^2},~V_c=3b
+$$
+引入无量纲化的
+$$
+\bar{T}=\frac{T}{T_{c}},~\bar{p}=\frac{p}{p_{c}},\bar{V}=\frac{V}{V_{c}}
+$$
+临界点 $\displaystyle p_{c}=T_{c}=V_{c}=1$ 热力学上对应态方程
+$$
+\bar{p}=\frac83\frac{\bar{T}}{\bar{v}-1/3}-\frac3{\bar{V}^2}
+$$
+#### 临界点附近压强和体积的关系
+直接得出：测量临界点附近几个量的依赖关系，展开并保留三阶小量。
+$$
+p'+1=\frac83\frac{1+T'}{v'+1/3}-\frac3{(v'+1)^2}
+$$
+$$
+\triangle p=\frac{ \partial p }{ \partial V } +\frac{1}{2}\frac{ \partial^{2} p }{ \partial V^{2} } \triangle v^2+\frac{1}{6}\frac{ \partial^{3} p }{ \partial V^{3} }
+$$
+$$
+\begin{align}
+\frac{ \partial p }{ \partial V } =-\frac{8}{3}\frac{T}{\left( V-\frac{1}{3} \right)^2}+\frac{6}{V^3}=-6T+6=0
+\end{align}
+$$
+$$
+\frac{ \partial^{2} p }{ \partial V^{2} }=\frac{16}{3} \frac{T}{\left( V-\frac{1}{3} \right)^{3}}-\frac{18}{V^4}=0
+$$
+$$
+\frac{ \partial^{3} p }{ \partial V^{3}}=-81T+72=-9 
+$$
+综上得到 $\displaystyle \triangle p\sim-\frac{3}{2}\triangle V^3$
+$$
+\rho-\rho_{c}=\frac{1}{V}-\frac{1}{V_{c}}\sim \mid V_{c}-V\mid
+$$
+$$
+p-p_{c}=\frac{1}{V}-\frac{1}{V_{c}}\sim \mid V_{c}-V\mid
+$$
+
+$$
+\begin{array}{l}\frac{\partial p}{\partial T}=\frac83\frac1{v-1/3}=4\\
+\Delta p\sim\Delta T \\ 
+\triangle p=\left( \frac{ \partial p }{ \partial T }\triangleT  \right) 
+\end{array}
+$$
